--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.main.allow-circular-references=true
+logging.level.org.springframework.web=DEBUG
