--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.16.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
